crates/pg_syntax/tests/snapshots/postgres_regress/int8@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q2, q1 + q2 AS plus FROM INT8_TBL;"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..13
    ColumnRef@11..13
      Ident@11..13 "q2"
  Ascii44@13..14 ","
  Whitespace@14..15 " "
  ResTarget@15..30
    AExpr@15..22
      ColumnRef@15..17
        Ident@15..17 "q1"
      Whitespace@17..18 " "
      Ascii43@18..19 "+"
      Whitespace@19..20 " "
      ColumnRef@20..22
        Ident@20..22 "q2"
    Whitespace@22..23 " "
    As@23..25 "AS"
    Whitespace@25..26 " "
    Ident@26..30 "plus"
  Whitespace@30..31 " "
  From@31..35 "FROM"
  Whitespace@35..36 " "
  RangeVar@36..44
    Ident@36..44 "INT8_TBL"
  Ascii59@44..45 ";"

