crates/pg_syntax/tests/snapshots/postgres_regress/int8@41.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q2, q1 - q2 AS minus FROM INT8_TBL;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..13
    ColumnRef@11..13
      Ident@11..13 "q2"
  Ascii44@13..14 ","
  Whitespace@14..15 " "
  ResTarget@15..31
    AExpr@15..22
      ColumnRef@15..17
        Ident@15..17 "q1"
      Whitespace@17..18 " "
      Ascii45@18..19 "-"
      Whitespace@19..20 " "
      ColumnRef@20..22
        Ident@20..22 "q2"
    Whitespace@22..23 " "
    As@23..25 "AS"
    Whitespace@25..26 " "
    Ident@26..31 "minus"
  Whitespace@31..32 " "
  From@32..36 "FROM"
  Whitespace@36..37 " "
  RangeVar@37..45
    Ident@37..45 "INT8_TBL"
  Ascii59@45..46 ";"

