crates/pg_syntax/tests/snapshots/postgres_regress/int8@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q2, q1 * q2 AS multiply FROM INT8_TBL;"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..13
    ColumnRef@11..13
      Ident@11..13 "q2"
  Ascii44@13..14 ","
  Whitespace@14..15 " "
  ResTarget@15..34
    AExpr@15..22
      ColumnRef@15..17
        Ident@15..17 "q1"
      Whitespace@17..18 " "
      Ascii42@18..19 "*"
      Whitespace@19..20 " "
      ColumnRef@20..22
        Ident@20..22 "q2"
    Whitespace@22..23 " "
    As@23..25 "AS"
    Whitespace@25..26 " "
    Ident@26..34 "multiply"
  Whitespace@34..35 " "
  From@35..39 "FROM"
  Whitespace@39..40 " "
  RangeVar@40..48
    Ident@40..48 "INT8_TBL"
  Ascii59@48..49 ";"

