crates/pg_syntax/tests/snapshots/postgres_regress/int8@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q2, q1 * q2 AS multiply FROM INT8_TBL\n WHERE q1 < 1000 or (q2 > 0 and q2 < 1000);"
---
SelectStmt@0..92
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..13
    ColumnRef@11..13
      Ident@11..13 "q2"
  Ascii44@13..14 ","
  Whitespace@14..15 " "
  ResTarget@15..34
    AExpr@15..22
      ColumnRef@15..17
        Ident@15..17 "q1"
      Whitespace@17..18 " "
      Ascii42@18..19 "*"
      Whitespace@19..20 " "
      ColumnRef@20..22
        Ident@20..22 "q2"
    Whitespace@22..23 " "
    As@23..25 "AS"
    Whitespace@25..26 " "
    Ident@26..34 "multiply"
  Whitespace@34..35 " "
  From@35..39 "FROM"
  Whitespace@39..40 " "
  RangeVar@40..48
    Ident@40..48 "INT8_TBL"
  Newline@48..49 "\n"
  Whitespace@49..50 " "
  Where@50..55 "WHERE"
  Whitespace@55..56 " "
  BoolExpr@56..90
    AExpr@56..65
      ColumnRef@56..58
        Ident@56..58 "q1"
      Whitespace@58..59 " "
      Ascii60@59..60 "<"
      Whitespace@60..61 " "
      AConst@61..65
        Iconst@61..65 "1000"
    Whitespace@65..66 " "
    Or@66..68 "or"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    BoolExpr@70..90
      AExpr@70..76
        ColumnRef@70..72
          Ident@70..72 "q2"
        Whitespace@72..73 " "
        Ascii62@73..74 ">"
        Whitespace@74..75 " "
        AConst@75..76
          Iconst@75..76 "0"
      Whitespace@76..77 " "
      And@77..80 "and"
      Whitespace@80..81 " "
      AExpr@81..90
        ColumnRef@81..83
          Ident@81..83 "q2"
        Whitespace@83..84 " "
        Ascii60@84..85 "<"
        Whitespace@85..86 " "
        AConst@86..90
          Iconst@86..90 "1000"
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

