crates/pg_syntax/tests/snapshots/postgres_regress/int8@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q2, q1 / q2 AS divide, q1 % q2 AS mod FROM INT8_TBL;"
---
SelectStmt@0..63
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..13
    ColumnRef@11..13
      Ident@11..13 "q2"
  Ascii44@13..14 ","
  Whitespace@14..15 " "
  ResTarget@15..32
    AExpr@15..22
      ColumnRef@15..17
        Ident@15..17 "q1"
      Whitespace@17..18 " "
      Ascii47@18..19 "/"
      Whitespace@19..20 " "
      ColumnRef@20..22
        Ident@20..22 "q2"
    Whitespace@22..23 " "
    As@23..25 "AS"
    Whitespace@25..26 " "
    Ident@26..32 "divide"
  Ascii44@32..33 ","
  Whitespace@33..34 " "
  ResTarget@34..48
    AExpr@34..41
      ColumnRef@34..36
        Ident@34..36 "q1"
      Whitespace@36..37 " "
      Ascii37@37..38 "%"
      Whitespace@38..39 " "
      ColumnRef@39..41
        Ident@39..41 "q2"
    Whitespace@41..42 " "
    As@42..44 "AS"
    Whitespace@44..45 " "
    Ident@45..48 "mod"
  Whitespace@48..49 " "
  From@49..53 "FROM"
  Whitespace@53..54 " "
  RangeVar@54..62
    Ident@54..62 "INT8_TBL"
  Ascii59@62..63 ";"

