crates/pg_syntax/tests/snapshots/postgres_regress/int8@47.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 37 + q1 AS plus4 FROM INT8_TBL;
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..23
    AExpr@7..14
      AConst@7..9
        Iconst@7..9 "37"
      Whitespace@9..10 " "
      Ascii43@10..11 "+"
      Whitespace@11..12 " "
      ColumnRef@12..14
        Ident@12..14 "q1"
    Whitespace@14..15 " "
    As@15..17 "AS"
    Whitespace@17..18 " "
    Ident@18..23 "plus4"
  Whitespace@23..24 " "
  From@24..28 "FROM"
  Whitespace@28..29 " "
  RangeVar@29..37
    Ident@29..37 "INT8_TBL"
  Ascii59@37..38 ";"

