crates/pg_syntax/tests/snapshots/postgres_regress/int8@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 2 * q1 AS \"twice int4\" FROM INT8_TBL;"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    AExpr@7..13
      AConst@7..8
        Iconst@7..8 "2"
      Whitespace@8..9 " "
      Ascii42@9..10 "*"
      Whitespace@10..11 " "
      ColumnRef@11..13
        Ident@11..13 "q1"
    Whitespace@13..14 " "
    As@14..16 "AS"
    Whitespace@16..17 " "
    Ident@17..29 "\"twice int4\""
  Whitespace@29..30 " "
  From@30..34 "FROM"
  Whitespace@34..35 " "
  RangeVar@35..43
    Ident@35..43 "INT8_TBL"
  Ascii59@43..44 ";"

