crates/pg_syntax/tests/snapshots/postgres_regress/int8@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INT8_TBL(q1) VALUES ('- 123');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INT8_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "q1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..40
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..40
      AConst@33..40
        Sconst@33..40 "'- 123'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

